fix: IE alignment bug
- replace the use of postion: initial with position: static
- IE doesn't support position: initial and was causing the content to stack vertically rather than display horizontally

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
@@ -192,7 +192,7 @@
     @include hb-global-color('color', 'white');
     min-width: hb-calculate-rems(100px);
     padding: hb-calculate-rems(12px) hb-calculate-rems(10px) hb-calculate-rems(8px);
-    margin-right: hb-calculate-rems(48px);
+    margin-right: hb-calculate-rems($hb-gutter-width);
     position: absolute;
     bottom: hb-calculate-rems(18px);
     left: hb-calculate-rems(-10px);
@@ -204,7 +204,7 @@
     }
 
     &:only-child {
-      position: initial;
+      position: static;
     }
   }
 
